--- a/build.gradle
+++ b/build.gradle
@@ -1,25 +1,25 @@
-group 'org.jacoco'
-version '1.0-SNAPSHOT'
-
-apply plugin: 'java'
-apply plugin: 'jacoco'
-
-sourceCompatibility = 1.7
-targetCompatibility = 1.7
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled true
-        html.enabled false
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    repositories {
+        mavenLocal()
+        maven { url 'https://artifactory.dev.cba/dw-sidekickbreakaway-gradle' }
+    }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:2.2.3'
+        classpath 'me.tatarka:gradle-retrolambda:3.7.0'
     }
 }
 
-check.dependsOn jacocoTestReport
+allprojects {
+    repositories {
+        mavenLocal()
+        maven { url 'https://artifactory.dev.cba/dw-sidekickbreakaway-gradle' }
+        maven { url 'https://artifactory.dev.cba/com.google.dl-android-cache' }
+    }
+}
+// Define versions in a single place
+ext {
+    retrofitVersion = '2.1.0'
+    okhttpurlconnectionVersion = '3.2.0'
+
+}
